Add readiness and liveness support
