# go/api/bg/openapi.yaml
@@ -6,6 +6,42 @@ info:
     title: Geo API
     version: 0.0.1
 paths:
+    /healthz:
+        get:
+            tags:
+                - Geo
+            operationId: Geo_Liveness
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/StatusReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /readyz:
+        get:
+            tags:
+                - Geo
+            operationId: Geo_Readiness
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/StatusReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /v1/location/{ip}:
         get:
             tags:
@@ -66,5 +102,10 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        StatusReply:
+            type: object
+            properties:
+                status:
+                    type: string
 tags:
     - name: Geo
